--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "xyk-dashboard-demo",
+    "name": "covex",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://covalenthq.github.io/dex-dashboard-template/",
+    "homepage": "https://covex.vercel.app/",
     "dependencies": {
         "@blueprintjs/core": "^3.52.0",
         "@testing-library/jest-dom": "^5.12.0",
