--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "covex",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://covex.vercel.app/",
+    "homepage": "https://covex.vercel.app/#/",
     "dependencies": {
         "@blueprintjs/core": "^3.52.0",
         "@testing-library/jest-dom": "^5.12.0",
